--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!---  Acerca de -->
 
     <section class="mosh-aboutUs-area section_padding_100_0" id="acerca">
-        <div class="container">
+        <div class="container" style="margin-bottom:5%;">
             <div class="row align-items-center">
                 <div class="col-12 col-md-6">
                     <div class="mosh-about-us-content">
@@ -91,10 +91,9 @@
                             <h2>Acerca de Nosotros</h2>
                         </div>
                         <p>
-                            Somos una empresa Mexicana ubicada en la Ciudad de Pachuca, Hgo. conformada por un excelente equipo de trabajo que ofrece el desarrollo de Software y herramientas que ayudan a ser más eficientes a nuestros clientes. 
-                            <br><br><br>
+                            Somos una empresa Mexicana ubicada en la Ciudad de Pachuca, Hgo. conformada por un excelente equipo de trabajo que ofrece el desarrollo de Software y herramientas que ayudan a ser más eficientes a nuestros clientes. <br><br>
                             Desarrollamos aplicaciones a la medida de los requerimientos, construidas con excelente standar en ingeniería.
-                            <br><br><br>
+                            <br><br>
                         </p>
                         <!-- <a href="#" class="btn mosh-btn mt-50">Read More</a> -->
                     </div>
