--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                             <ul class="navbar-nav animated" id="nav">
                                                 
                                                 <li class="nav-item"><a class="nav-link" data-link="acerca">Acerca De</a></li>
-                                                <li class="nav-item"><a class="nav-link" data-link="equipo">Equipo</a></li>
+                                                <!-- <li class="nav-item"><a class="nav-link" data-link="equipo">Equipo</a></li> -->
                                                 <li class="nav-item"><a class="nav-link" href="bolsa_trabajo.html">Bolsa de Trabajo</a></li>
                                                 <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                                                 <li class="nav-item"><a class="nav-link" data-link="contacto">Contacto</a></li>
