--- a/bolsa_trabajo.html
+++ b/bolsa_trabajo.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>1071 Digital - Blog</title>
+    <title>1071 Digital - Bolsa de Trabajo</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/d.png">
@@ -49,8 +49,8 @@
 
                                         <div class="collapse navbar-collapse justify-content-end" id="mosh-navbar">
                                             <ul class="navbar-nav animated" id="nav">
-                                                
-                                                <li class="nav-item active"><a class="nav-link" href="bolsa_trabajo.html">Bolsa de Trabajo</a></li>
+                                                <li class="nav-item "><a class="nav-link" href="index.html">Inicio</a></li>
+                                                <!-- <li class="nav-item active"><a class="nav-link" href="bolsa_trabajo.html">Bolsa de Trabajo</a></li> -->
                                                 <li class="nav-item "><a class="nav-link" href="blog.html">Blog</a></li>
                                                 <li class="nav-item"><a class="nav-link" data-link="contacto">Contacto</a></li>
                                             </ul>
@@ -84,7 +84,7 @@
     </div>
     <!-- ***** Breadcumb Area End ***** -->
 
-     <section class="mosh-aboutUs-area section_padding_100_0" id="acerca">
+     <section class="mosh-aboutUs-area section_padding_100_0" id="acerca" style="margin-bottom: 5%;">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-6">
@@ -93,7 +93,11 @@
                             
                             <h2>Queremos que seas parte del equipo</h2>
                         </div>
-                        <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mat tis effic iturut magna. Pellentesque sit amet tellus blandit. Etiam nec odio ves tibul. Nec odio vestibulum est mattis effic iturut magna. Pellente sque sita met tellus blandit. Etiam nec odio. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mat tis effic iturut magna.</p>
+                        <p>
+                        A continuación te mostramos nuestras vacantes, estamos buscando hacer crecer nuestro equipo. 
+                        <br><br>
+                        Conoce los requerimientos de cada uno de los puestos y envíanos tu CV junto con tus datos para que podamos ponernos en contacto contigo.
+                        </p>
                         <!-- <a href="#" class="btn mosh-btn mt-50">Read More</a> -->
                     </div>
                 </div>
@@ -119,7 +123,32 @@
                                 <!-- <p>_________________</p> -->
                                 <h2>Desarrollador SR</h2>
                             </div>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mat tis effic iturut magna. Pellentesque sit amet tellus blandit. Etiam nec odio ves tibul. Nec odio vestibulum est mattis effic iturut magna. Pellente sque sita met tellus blandit. Etiam nec odio.</p>
+                            <p>
+                                - 5+ años de experiencia programando en PHP Codeigniter, LAMP, MySQL.
+                                <br>
+                                - Haber sido mentor de desarrolladores de software junior.
+                                <br>
+                                - Experiencia en la revisión de trabajo de código para precisión y funcionalidad.
+                                <br>
+                                - Concocimientos amplios en PHP (framework Codeigniter de preferencia).
+                                <br>
+                                - Experiencia OOP (Programación orientada a objetos) &#38; SOA (Arquitectura orientada a servicios).
+                                <br>    
+                                - Experiencia trabajando con grandes bases de código.
+                                <br>
+                                - Experiencia práctica construyendo y utilizando RESTful APIs.
+                                <br>
+                                - Haber trajado dentro de un ambiente de desarrollo Scrum/Ágil.
+                                <br>
+                                - Altamente escalable en proyectos que involucren infraestructura de diseño e implementación basada en la nube.
+                                <br>
+                                - Buen conocimiento y uso del idioma inglés (70% escritura/conversación).
+                                <br>
+                                - Buen entendimiento de las tecnologías de front-end como JavaScript, HTML5, and CSS3 (SASS).
+                                <br>
+                                - Estar familiarizado con las herramientas de líneas de comando shell scripting/UNIX .
+
+                            </p>
                             <div class="ceo-meta-data d-flex align-items-center mt-50">
                                <button class="btn mosh-btn mt-50" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Postúlate</button>
                             </div>
@@ -143,7 +172,30 @@
                                 <!-- <p>_________________</p> -->
                                 <h2>Desarrollador JR</h2>
                             </div>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mat tis effic iturut magna. Pellentesque sit amet tellus blandit. Etiam nec odio ves tibul. Nec odio vestibulum est mattis effic iturut magna. Pellente sque sita met tellus blandit. Etiam nec odio.</p>
+                            <p>
+                                - Conocimientos en leguanjes PHP Codeigniter y MySQL.
+                                <br>
+                                - Rápida adaptabilidad.
+                                <br>
+                                - Código limpio y bien documentado.
+                                <br>
+                                - Concocimientos en PHP (framework Codeigniter de preferencia)
+                                <br>
+                                -Entendimiento de aplicación de tecnología AJAX.
+                                <br>
+                                - Conocimientos sobre el uso de OOP (Programación orientada a objetos) &#38; SOA (Arquitectura orientada a servicios)
+                                <br>    
+                                - Nociones y haber utilizado RESTful APIs.
+                                <br>
+                                - Haber utilizado metologías Scrum/Ágil.
+                                <br>
+                                - Buen conocimiento y uso del idioma inglés (70% escritura/conversación).
+                                <br>
+                                - Buen entendimiento de las tecnologías de front-end como JavaScript, HTML5, and CSS3 (SASS).
+                                <br>
+                                - Estar familiarizado con las herramientas de líneas de comando shell scripting/UNIX.
+ 
+                            </p>
                             <div class="ceo-meta-data d-flex align-items-center mt-50">
                                <button class="btn mosh-btn mt-50" type="submit">Postúlate</button>
                             </div>
