--- a/bolsa_trabajo.html
+++ b/bolsa_trabajo.html
@@ -114,10 +114,10 @@
 
  <!-- ***** Few Words Area Start ***** -->
     <section class="few-words-from-ceo d-md-flex">
-        <div class="few-words-contents d-flex align-items-center justify-content-center wow fadeInLeftBig" data-wow-delay="0.1s">
+        <div class="few-words-contents d-flex align-items-center justify-content-center wow fadeInLeftBig" data-wow-delay="0.1s" style="height: 1000px !important;">
             <div class="container-fluid">
                 <div class="row justify-content-center">
-                    <div class="col-12 col-md-11 col-lg-9 col-xl-7">
+                    <div class="col-12 col-md-11 col-lg-11 col-xl-10">
                         <div class="few-words-text">
                             <div class="section-heading">
                                 <!-- <p>_________________</p> -->
@@ -157,16 +157,16 @@
                 </div>
             </div>
         </div>
-        <div class="few-words-thumb bg-img wow fadeInRightBig" data-wow-delay="0.3s" style="background-image: url(img/w.jpg);"></div>
+        <div class="few-words-thumb bg-img wow fadeInRightBig" data-wow-delay="0.3s" style="background-image: url(img/bt1.jpg);"></div>
     </section>
     
 
         <section class="few-words-from-ceo d-md-flex">
-        <div class="few-words-thumb bg-img wow fadeInRightBig" data-wow-delay="0.3s" style="background-image: url(img/w.jpg);"></div>
-        <div class="few-words-contents d-flex align-items-center justify-content-center wow fadeInLeftBig" data-wow-delay="0.1s">
+        <div class="few-words-thumb bg-img wow fadeInRightBig" data-wow-delay="0.3s" style="background-image: url(img/bt2.jpg);"></div>
+        <div class="few-words-contents d-flex align-items-center justify-content-center wow fadeInLeftBig" data-wow-delay="0.1s" style="height: 1000px !important;">
             <div class="container-fluid">
                 <div class="row justify-content-center">
-                    <div class="col-12 col-md-11 col-lg-9 col-xl-7">
+                    <div class="col-12 col-md-11 col-lg-11 col-xl-10">
                         <div class="few-words-text">
                             <div class="section-heading">
                                 <!-- <p>_________________</p> -->
