--- a/blog.html
+++ b/blog.html
@@ -164,7 +164,7 @@
                             <!-- Single Latest Blog Post -->
                             <div class="single-latest-blog-post d-flex">
                                 <div class="latest-blog-post-thumb">
-                                    <img src="img/blog-img/lb-1.jpg" alt="">
+                                    <img src="img/blog-img/1.jpg" alt="">
                                 </div>
                                 <div class="latest-blog-post-content">
                                     <h6><a href="#">¿Por qué los ingenieros en sistemas son imprescindibles en la actualidad?</a></h6>
