--- a/post.html
+++ b/post.html
@@ -97,15 +97,16 @@
                                 <div class="container">
                                     <div class="row align-items-center">
                                      <div class="col-12 col-md-6">
-                                            <div class="mosh-about-us-thumb wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
-                                                <img src="img/bg-img/headpiece.png" alt="">
-                                            </div>
+                                            
                                         </div>
                                         <div class="col-12 col-md-6">
                                             <div class="mosh-about-us-content">
                                                 <div class="section-heading">
                                                     <p>Tecnología</p>
                                                     <h2>¿Por qué los ingenieros en sistemas son imprescindibles en la actualidad?</h2>
+                                                </div>
+                                                <div class="mosh-about-us-thumb wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
+                                                    <img src="img/bg-img/1.jpg" alt="">
                                                 </div>
                                                 <p>
                                                 Los sistemas de ingeniería modernos son extensos y complejos. Incluyen redes de telecomunicaciones, sistemas de defensa, sistemas de control del tráfico aéreo y la fabricación de plantas de producción. Todo ello está construido con componentes básicos conectados con mayor o menor solidez.
@@ -120,7 +121,7 @@
 
                                                     <br><br>
                                                     Los ingenieros de sistemas deben tener amplios conocimientos porque a menudo gestionan proyectos, lo que implica liderar equipos formados por ingenieros con diferentes conocimientos y experiencia.
-                                                    
+
                                                     <br><br>
                                                     Deben entender tanto el punto de vista del fabricante como el del operario. Los ingenieros de sistemas también trabajan con los departamentos de ventas y marketing.
 
