--- a/post.html
+++ b/post.html
@@ -89,7 +89,7 @@
     <section class="blog-area " style="padding-bottom:200px;">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-18">
+                <div class="col-12 col-md-8">
                     <div class="mosh-blog-posts">
                         <div class="row">
                             <!-- Single Blog Start -->
@@ -106,7 +106,7 @@
                                                     <h2>¿Por qué los ingenieros en sistemas son imprescindibles en la actualidad?</h2>
                                                 </div>
                                                 <div class="mosh-about-us-thumb wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
-                                                    <img src="img/bg-img/1.jpg" alt="">
+                                                    <img src="img/blog-img/1.jpg" alt="">
                                                 </div>
                                                 <p>
                                                 Los sistemas de ingeniería modernos son extensos y complejos. Incluyen redes de telecomunicaciones, sistemas de defensa, sistemas de control del tráfico aéreo y la fabricación de plantas de producción. Todo ello está construido con componentes básicos conectados con mayor o menor solidez.
