--- a/post.html
+++ b/post.html
@@ -96,10 +96,10 @@
                             <section class="">
                                 <div class="container">
                                     <div class="row align-items-center">
-                                     <div class="col-12 col-md-6">
+                                     <div class="col-11">
                                             
                                         </div>
-                                        <div class="col-12 col-md-6">
+                                        <div class="col-12">
                                             <div class="mosh-about-us-content">
                                                 <div class="section-heading">
                                                     <p>Tecnología</p>
@@ -109,6 +109,7 @@
                                                     <img src="img/blog-img/1.jpg" alt="">
                                                 </div>
                                                 <p>
+                                                <br><br>
                                                 Los sistemas de ingeniería modernos son extensos y complejos. Incluyen redes de telecomunicaciones, sistemas de defensa, sistemas de control del tráfico aéreo y la fabricación de plantas de producción. Todo ello está construido con componentes básicos conectados con mayor o menor solidez.
                                                 <br><br>
                                                     Los ingenieros de sistemas son los responsables del funcionamiento adecuado de todo el sistema. Se implican en la investigación y el diseño, la fabricación, reparaciones, mantenimiento y marketing. En la actualidad y en la era cibernética en la que vivimos, esta prefesión cada vez es más importante y necesaria en todos los ámbitos.
