--- a/post.html
+++ b/post.html
@@ -116,16 +116,10 @@
                                                     <br><br>
                                                     La ingeniería de sistemas no trata solo del conocimiento de las diversas áreas de la ingeniería, sino de hacer que los sistemas funcionen teniendo en cuenta todos los factores involucrados. Estos incluyen especificaciones y objetivos, el desarrollo de sistemas con el paso del tiempo, los procesos y métodos implicados, así como las consideraciones económicas, de seguridad, calidad y medioambientales. Tienen que escribir informes para registrar los recursos necesarios, incluido el personal, maquinaria, tecnología y finanzas.
                                                     <br><br>
-                                                    Los ingenieros de sistemas pueden poseer un conocimiento profundo de una área de especialización, aunque es esencial que tengan amplios conocimientos de muchos ámbitos, como de electrónica, mecánica, ergonomía y software.
+                                                    Los ingenieros de sistemas pueden poseer un conocimiento profundo de una área de especialización, aunque es esencial que tengan amplios conocimientos de muchos ámbitos, como de electrónica, mecánica, ergonomía y software, ya que su campo de estudio se expande y se complementa con más ciencias.
                                                     <br><br>
-                                                    Un sistema de ingeniería típico comporta muchos tipos diferentes de ingenieros que trabajan juntos como un equipo; el ingeniero de sistemas debe ser capaz de comprender y respaldar el trabajo de todos los miembros del equipo.
-
-                                                    <br><br>
-                                                    Los ingenieros de sistemas deben tener amplios conocimientos porque a menudo gestionan proyectos, lo que implica liderar equipos formados por ingenieros con diferentes conocimientos y experiencia.
-
-                                                    <br><br>
-                                                    Deben entender tanto el punto de vista del fabricante como el del operario. Los ingenieros de sistemas también trabajan con los departamentos de ventas y marketing.
-
+                                                    Un sistema de ingeniería típico comporta muchos tipos diferentes de ingenieros que trabajan juntos como un equipo; el ingeniero de sistemas debe ser capaz de comprender y respaldar el trabajo de todos los miembros del equipo, siempre buscando alcanzar un mismo fin, pero pudiendi compartir conocimientos, comúnmente los proyectos tecnológicos implican mucho tiempo y trabajo, por ello se desarrollan a través de equipos, apreindiedo a saber liderar equipos formados por ingenieros con diferentes conocimientos y experiencia.
+                                                    
                                                     <br><br>
                                                 </p>
                                                 
