--- a/bolsa_trabajo.html
+++ b/bolsa_trabajo.html
@@ -322,8 +322,8 @@
                     </div>
           </div>
           <div class="modal-footer">
-          <button class="btn mosh-btn mt-50" type="submit">Close</button>
-                                    <button class="btn mosh-btn mt-50" style="background-color:  #6d6d6d" type="submit">Close</button>
+          <button class="btn mosh-btn mt-50" type="submit">Postularse</button>
+                                    <button class="btn mosh-btn mt-50" style="background-color:  #6d6d6d" type="submit" data-dismiss="modal" aria-label="Close">Close</button>
             
                                   
 
