--- a/bolsa_trabajo.html
+++ b/bolsa_trabajo.html
@@ -114,7 +114,7 @@
 
  <!-- ***** Few Words Area Start ***** -->
     <section class="few-words-from-ceo d-md-flex">
-        <div class="few-words-contents d-flex align-items-center justify-content-center wow fadeInLeftBig" data-wow-delay="0.1s" style="height: 1000px !important;">
+        <div class="few-words-contents d-flex align-items-center justify-content-center wow fadeInLeftBig" data-wow-delay="0.1s" style="height: 68em !important;">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-11 col-lg-11 col-xl-10">
@@ -157,13 +157,13 @@
                 </div>
             </div>
         </div>
-        <div class="few-words-thumb bg-img wow fadeInRightBig" data-wow-delay="0.3s" style="background-image: url(img/bt1.jpg); height: 1000px !important;"></div>
+        <div class="few-words-thumb bg-img wow fadeInRightBig" id="imagen1" data-wow-delay="0.3s" style="background-image: url(img/bt1.jpg); height: 68em !important;"></div>
     </section>
     
 
         <section class="few-words-from-ceo d-md-flex">
-        <div class="few-words-thumb bg-img wow fadeInRightBig" data-wow-delay="0.3s" style="background-image: url(img/bt2.jpg); height: 1000px !important;"></div>
-        <div class="few-words-contents d-flex align-items-center justify-content-center wow fadeInLeftBig" data-wow-delay="0.1s" style="height: 1000px !important;">
+        <div class="few-words-thumb bg-img wow fadeInRightBig" id="imagen2" data-wow-delay="0.3s" style="background-image: url(img/bt2.jpg); height: 68em !important;"></div>
+        <div class="few-words-contents d-flex align-items-center justify-content-center wow fadeInLeftBig" data-wow-delay="0.1s" style="height: 68em !important;">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-11 col-lg-11 col-xl-10">
