--- a/bolsa_trabajo.html
+++ b/bolsa_trabajo.html
@@ -157,12 +157,12 @@
                 </div>
             </div>
         </div>
-        <div class="few-words-thumb bg-img wow fadeInRightBig" id="imagen1" data-wow-delay="0.3s" style="background-image: url(img/bt1.jpg); height: 68em !important;"></div>
+        <div class="few-words-thumb bg-img wow fadeInRightBig" id="imagen1" data-wow-delay="0.3s" style="background-image: url(img/bt1.jpg); "></div>
     </section>
     
 
         <section class="few-words-from-ceo d-md-flex">
-        <div class="few-words-thumb bg-img wow fadeInRightBig" id="imagen2" data-wow-delay="0.3s" style="background-image: url(img/bt2.jpg); height: 68em !important;"></div>
+        <div class="few-words-thumb bg-img wow fadeInRightBig" id="imagen2" data-wow-delay="0.3s" style="background-image: url(img/bt2.jpg); "></div>
         <div class="few-words-contents d-flex align-items-center justify-content-center wow fadeInLeftBig" data-wow-delay="0.1s" style="height: 68em !important;">
             <div class="container-fluid">
                 <div class="row justify-content-center">
