--- a/bolsa_trabajo.html
+++ b/bolsa_trabajo.html
@@ -124,29 +124,29 @@
                                 <h2>Desarrollador SR</h2>
                             </div>
                             <p>
-                                - 5+ años de experiencia programando en PHP Codeigniter, LAMP, MySQL.
+                                - 5+ años de experiencia programando en PHP Codeigniter, LAMP, MySQL
                                 <br>
-                                - Haber sido mentor de desarrolladores de software junior.
+                                - Haber sido mentor de desarrolladores de software junior
                                 <br>
-                                - Experiencia en la revisión de trabajo de código para precisión y funcionalidad.
+                                - Experiencia en la revisión de trabajo de código para precisión y funcionalidad
                                 <br>
-                                - Concocimientos amplios en PHP (framework Codeigniter de preferencia).
+                                - Concocimientos amplios en PHP (framework Codeigniter de preferencia)
                                 <br>
-                                - Experiencia OOP (Programación orientada a objetos) &#38; SOA (Arquitectura orientada a servicios).
+                                - Experiencia OOP (Programación orientada a objetos) &#38; SOA (Arquitectura orientada a servicios)
                                 <br>    
-                                - Experiencia trabajando con grandes bases de código.
+                                - Experiencia trabajando con grandes bases de código
                                 <br>
-                                - Experiencia práctica construyendo y utilizando RESTful APIs.
+                                - Experiencia práctica construyendo y utilizando RESTful APIs
                                 <br>
-                                - Haber trajado dentro de un ambiente de desarrollo Scrum/Ágil.
+                                - Haber trajado dentro de un ambiente de desarrollo Scrum/Ágil
                                 <br>
-                                - Altamente escalable en proyectos que involucren infraestructura de diseño e implementación basada en la nube.
+                                - Altamente escalable en proyectos que involucren infraestructura de diseño e implementación basada en la nube
                                 <br>
-                                - Buen conocimiento y uso del idioma inglés (70% escritura/conversación).
+                                - Buen conocimiento y uso del idioma inglés (70% escritura/conversación)
                                 <br>
-                                - Buen entendimiento de las tecnologías de front-end como JavaScript, HTML5, and CSS3 (SASS).
+                                - Buen entendimiento de las tecnologías de front-end como JavaScript, HTML5, and CSS3 (SASS)
                                 <br>
-                                - Estar familiarizado con las herramientas de líneas de comando shell scripting/UNIX .
+                                - Estar familiarizado con las herramientas de líneas de comando shell scripting/UNIX 
 
                             </p>
                             <div class="ceo-meta-data d-flex align-items-center mt-50">
@@ -157,12 +157,12 @@
                 </div>
             </div>
         </div>
-        <div class="few-words-thumb bg-img wow fadeInRightBig" id="imagen1" data-wow-delay="0.3s" style="background-image: url(img/bt1.jpg); "></div>
+        <div class="few-words-thumb bg-img wow fadeInRightBig" id="imagen1" data-wow-delay="0.3s" style="background-image: url(img/bt1.jpg); height: 68em !important;"></div>
     </section>
     
 
         <section class="few-words-from-ceo d-md-flex">
-        <div class="few-words-thumb bg-img wow fadeInRightBig" id="imagen2" data-wow-delay="0.3s" style="background-image: url(img/bt2.jpg); "></div>
+        <div class="few-words-thumb bg-img wow fadeInRightBig" id="imagen2" data-wow-delay="0.3s" style="background-image: url(img/bt2.jpg); height: 68em !important;"></div>
         <div class="few-words-contents d-flex align-items-center justify-content-center wow fadeInLeftBig" data-wow-delay="0.1s" style="height: 68em !important;">
             <div class="container-fluid">
                 <div class="row justify-content-center">
@@ -173,27 +173,27 @@
                                 <h2>Desarrollador JR</h2>
                             </div>
                             <p>
-                                - Conocimientos en leguanjes PHP Codeigniter y MySQL.
+                                - Conocimientos en leguanjes PHP Codeigniter y MySQL
                                 <br>
-                                - Rápida adaptabilidad.
+                                - Rápida adaptabilidad
                                 <br>
-                                - Código limpio y bien documentado.
+                                - Código limpio y bien documentado
                                 <br>
                                 - Concocimientos en PHP (framework Codeigniter de preferencia)
                                 <br>
-                                -Entendimiento de aplicación de tecnología AJAX.
+                                -Entendimiento de aplicación de tecnología AJAX
                                 <br>
                                 - Conocimientos sobre el uso de OOP (Programación orientada a objetos) &#38; SOA (Arquitectura orientada a servicios)
                                 <br>    
-                                - Nociones y haber utilizado RESTful APIs.
+                                - Nociones y haber utilizado RESTful APIs
                                 <br>
-                                - Haber utilizado metologías Scrum/Ágil.
+                                - Haber utilizado metologías Scrum/Ágil
                                 <br>
-                                - Buen conocimiento y uso del idioma inglés (70% escritura/conversación).
+                                - Buen conocimiento y uso del idioma inglés (70% escritura/conversación)
                                 <br>
-                                - Buen entendimiento de las tecnologías de front-end como JavaScript, HTML5, and CSS3 (SASS).
+                                - Buen entendimiento de las tecnologías de front-end como JavaScript, HTML5, and CSS3 (SASS)
                                 <br>
-                                - Estar familiarizado con las herramientas de líneas de comando shell scripting/UNIX.
+                                - Estar familiarizado con las herramientas de líneas de comando shell scripting/UNIX
  
                             </p>
                             <div class="ceo-meta-data d-flex align-items-center mt-50">
