--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                             <h2>Acerca de Nosotros</h2>
                         </div>
                         <p>
-                            Somos una empresa Mexicana ubicada en la Ciudad de Pachuca, Hgo. conformada por un excelente equipo de trabajo que ofrece el desarrollo de Software y herramientas que ayudan a ser más eficientes a nuestros clientes. <br><br>
-                            Desarrollamos aplicaciones a la medida de los requerimientos, construidas con excelente standar en ingeniería.
+                            Somos una empresa mexicana ubicada en la ciudad de Pachuca, Hgo. conformada por un excelente equipo de trabajo que ofrece el desarrollo de Software y herramientas que ayudan a ser más eficientes a nuestros clientes. <br><br>
+                            Desarrollamos aplicaciones a la medida de los requerimientos, construidas con excelente estándar en ingeniería.
                             <br><br>
                         </p>
                         <!-- <a href="#" class="btn mosh-btn mt-50">Read More</a> -->
