--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <div class="contact-icon mr-15">
                                 <img src="img/core-img/map.png" alt="">
                             </div>
-                            <p>Ave. Revolucion 1106 <br> Pachuca, Hidalgo, 42060</p>
+                            <p>Ave. Revolución 1106 <br> Pachuca, Hidalgo, 42060</p>
                         </div>
                        
                         <div class="single-contact-info d-flex">
