--- a/bolsa_trabajo.html
+++ b/bolsa_trabajo.html
@@ -130,7 +130,7 @@
                                 <br>
                                 - Experiencia en la revisión de trabajo de código para precisión y funcionalidad
                                 <br>
-                                - Concocimientos amplios en PHP (framework Codeigniter de preferencia)
+                                - Conocimientos amplios en PHP (framework Codeigniter de preferencia)
                                 <br>
                                 - Experiencia OOP (Programación orientada a objetos) &#38; SOA (Arquitectura orientada a servicios)
                                 <br>    
@@ -138,7 +138,7 @@
                                 <br>
                                 - Experiencia práctica construyendo y utilizando RESTful APIs
                                 <br>
-                                - Haber trajado dentro de un ambiente de desarrollo Scrum/Ágil
+                                - Haber trabajado dentro de un ambiente de desarrollo Scrum/Ágil
                                 <br>
                                 - Altamente escalable en proyectos que involucren infraestructura de diseño e implementación basada en la nube
                                 <br>
