--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <!-- <p>_________________</p> -->
                                 <h2>Bolsa de trabajo</h2>
                             </div>
-                            <p>En 1071 Digital buscamos crecer y hacer un equipo de trabajo que lleve nuestraa filosofía a nuevos niveles, conoce nuestras vacantes y envía tus datos para formar parte de nuestro equipo</p>
+                            <p>En 1071 Digital buscamos crecer y hacer un equipo de trabajo que lleve nuestra filosofía a nuevos niveles, conoce nuestras vacantes y envía tus datos para formar parte de nuestro equipo</p>
                             <div class="ceo-meta-data d-flex align-items-center mt-50">
                                  <a href="bolsa_trabajo.html" class="btn mosh-btn">Forma parte del equipo</a>
                                
