--- a/bolsa_trabajo.html
+++ b/bolsa_trabajo.html
@@ -94,7 +94,7 @@
                             <h2>Queremos que seas parte del equipo</h2>
                         </div>
                         <p>
-                        A continuación te mostramos nuestras vacantes, estamos buscando hacer crecer nuestro equipo. 
+                        A continuación, te mostramos nuestras vacantes, estamos buscando hacer crecer nuestro equipo. 
                         <br><br>
                         Conoce los requerimientos de cada uno de los puestos y envíanos tu CV junto con tus datos para que podamos ponernos en contacto contigo.
                         </p>
