--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="col-12">
                     <div class="cta-content text-center wow fadeIn" data-wow-delay="0.2s">
                         <div class="section-heading">
-                            <p>Entérate sobre noticias e historias relevantes que nos mueven</p>
+                            <p style="text-align:center;">Entérate sobre noticias e historias relevantes que nos mueven</p>
                             <h2>Visita nuestro Blog</h2>
                             <a href="blog.html" class="btn mosh-btn">Ir</a>
                         </div>
