--- a/post.html
+++ b/post.html
@@ -155,7 +155,7 @@
                         </div>
 
                         <div class="blog-post-archives mb-100">
-                            <h5>Archives</h5>
+                            <h5>Archivos</h5>
                             <ul>
                                 <li><a href="#">Octubre 2018</a></li>
                                 <!--<li><a href="#">April 2018</a></li>
@@ -237,7 +237,7 @@
                             <div class="contact-icon mr-15">
                                 <img src="img/core-img/map.png" alt="">
                             </div>
-                            <p>Ave. Revolución 1106 <br> Pachuca, Hidalgo, 42060</p>
+                            <p>Av. Revolución 1106 <br> Pachuca, Hidalgo, 42060</p>
                         </div>
                        
                         <div class="single-contact-info d-flex">
