--- a/bolsa_trabajo.html
+++ b/bolsa_trabajo.html
@@ -249,7 +249,7 @@
                             <div class="contact-icon mr-15">
                                 <img src="img/core-img/map.png" alt="">
                             </div>
-                            <p>Ave. Revolución 1106 <br> Pachuca, Hidalgo, 42060</p>
+                            <p>Av. Revolución 1106 <br> Pachuca, Hidalgo, 42060</p>
                         </div>
                        
                         <div class="single-contact-info d-flex">
